<resources>
    <string name="app_name">云检试行版</string>
    <string name="tip_finishapp">是否退出应用</string>
    <string name="tap_login">登录</string>
    <string name="tap_ok">确定</string>
    <string name="tap_cancel">取消</string>
    <string name="tap_forget">忘记密码</string>
    <!--    首页底部导航栏-->
    <string name="navigation_home">首页</string>
    <string name="navigation_task">任务</string>
    <string name="navigation_quantity">质量诊断</string>
    <string name="navigation_mine">我的</string>
    <!--    巡检/任务列表-->
    <string name="test_name">任务名称</string>
    <string name="test_jiancefangfa">检测方法</string>
    <string name="test_jiancestandard">检测标准</string>
    <string name="test_jiancexiang">检测项</string>
    <string name="tap_hege">合格</string>
    <string name="tap_buhege">不合格</string>
    <string name="tap_submit">提交</string>
    <string name="tap_save">保存</string>
    <string name="tap_return">返回</string>
    <string name="title_xunjian_item">日常巡检任务</string>
    <string name="title_task_item">任务</string>
    <string name="test_result">检测结果</string>
    <!--    我的页面-->
    <string name="mine_username">姓名:</string>
    <string name="mine_role">角色:</string>
    <string name="mine_project">项目:</string>
    <string name="minelist_myinfo">个人信息</string>
    <string name="minelist_deptment">部门信息</string>
    <string name="minelist_team">班组信息</string>
    <string name="mine_exit">退出</string>

    <!--添加日志-->
    <string name="addlog_projectname">项目名称</string>
    <string name="addlog_time">登记时间</string>
    <string name="addlog_weather">当前天气</string>
    <string name="addlog_progress">形象进度</string>
    <string name="addlog_person">巡查人</string>
    <string name="addlog_content">施工内容</string>
    <string name="addlog_qualitycontent">质量巡查内容</string>

    <!--    添加巡检-->
    <string name="addxunjian_name">任务名称</string>
    <string name="addxunjian_title">添加日常巡检任务</string>
    <string name="addxunjian_type">任务类型</string>
    <string name="addxunjian_item">检验项</string>
    <string name="tab_create">创建</string>
    <!--首页__今日待做-->
    <string name="today_things_title">今日待做</string>
    <string name="today_things_date1">Sep</string>
    <string name="today_things_date2">20</string>
    <string name="today_things_week">周五</string>
</resources>