<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_margin="@dimen/dimen_10dp"
                android:id="@+id/userImage"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:src="@drawable/logo"
                app:riv_oval="true">
            </com.makeramen.roundedimageview.RoundedImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Mine_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mine_username" />

                <TextView
                    android:id="@+id/Mine_userrole"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mine_role" />

                <TextView
                    android:id="@+id/Mine_userProject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mine_project" />
            </LinearLayout>
        </LinearLayout>

    <ListView
        android:layout_marginTop="@dimen/dimen_20dp"
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <com.xuexiang.xui.widget.button.roundbutton.RoundButton
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RoundButton.Blue"
            android:text="@string/mine_exit"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_25dp"
            android:layout_marginRight="@dimen/dimen_25dp"
            app:rb_isRadiusAdjustBounds="true"
            android:textColor="#FFFFFF"
            android:textSize="30sp">
        </com.xuexiang.xui.widget.button.roundbutton.RoundButton>

</LinearLayout>